# now-playing-controls

./: Cargo.toml
src/: discord.rs  model.rs
src/sys_media/: linux.rs  macos.rs  windows.rs
