[package]
name = "now-playing-controls"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Log
tracing = "0.1"

# Error & Serialize
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
discord-rich-presence = "1.0"
url = "2.5"

# Windows
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = ["Media_Playback", "Storage_Streams"]

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.10"
tempfile = "3.24"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-media-player = "0.3"

# Clippy Lints
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
